2008-03-11  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tclEncoding.c (LoadEscapeEncoding): avoid leaking escape
	sub-encodings, fixes encoding-11.1 failing after iso2022-jp loaded
	(e.g. TESTFLAGS='-singleproc 1 -match "chan-io-1.8 encoding-11.1"').

	* macosx/tclMacOSXNotify.c: avoid using CoreFoundation after fork() on
	Darwin 9 even when TclpCreateProcess() uses vfork().

	* macosx/Tcl.xcodeproj/project.pbxproj:	add support for Xcode 3.1 and
	* macosx/Tcl.xcodeproj/default.pbxuser:	targets for building with
	* macosx/Tcl-Common.xcconfig:		gcc-4.2 and llvm-gcc-4.2.

	* unix/tclUnixPort.h:			workaround vfork() problems
						in llvm-gcc-4.2.1 -O4 build.

	* unix/tclUnixPort.h:			move MODULE_SCOPE compat define
						to top [Bug 1911102].

	* macosx/GNUmakefile:			fix quoting to allow paths to
	* macosx/Tcl-Common.xcconfig:		${builddir} and ${INSTALL_ROOT}
	* unix/Makefile.in:			to contain spaces.
	* unix/configure.in:
	* unix/install-sh:
	* unix/tcl.m4:
	* tests/ioCmd.test:

	* unix/configure:			autoconf-2.59

	* unix/Makefile.in (install-strip):	strip non-global symbols from
						dynamic library.

	* unix/tclUnixNotfy.c:			fix warning

	* tests/exec.test (exec-9.7):		reduce timing sensitivity
	* tests/socket.test (socket-2.11):	(esp. on multi-proc machines).

	* tests/fCmd.test (fCmd-9.4):		skip on Darwin 9 (xfail).

2008-03-11  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclVar.c (TclDeleteNamespaceVars):
	* tests/var.test (var-8.2): unset traces on vars should be called
	with a FQ named during namespace deletion. This was causing
	infinite loops when unset traces recreated the var, as reported by
	Julian Noble on [Bug 1911919]. 

2008-03-10  Don Porter	<dgp@users.sourceforge.net>

	* changes:		Updated for 8.5.2 release.

	* doc/http.n:	Revised to indicate that [package require http 2.5.5]
	is needed to get all the documented commands ([http::meta]).

	* generic/tclEvent.c (TclDefaultBgErrorHandlerObjCmd):  Added error